# Sx-ver35

./: .env.prod  README.md  bot.py  config.cfg  pip_mirror.txt  pyproject.toml
.arkrecord/: ark_log.txt  arkgacha_record16.db
accounts/243978015/: config.yml  device.json  session.token
accounts/243978015/data/images/: 000562.ldb  LOG  MANIFEST-000564
accounts/243978015/data/leveldb-v3/: 000583.ldb  000584.ldb  LOG  MANIFEST-000586
accounts/243978015/data/videos/: LOG  MANIFEST-000403
accounts/binary/: accounts.json  accounts.pkl
data/electricity/: 1582932750_20230527021301.txt  1582932750_20230527021303.txt  2607232048_20230527010714.txt  2607232048_20230527014241.txt  2607232048_20230527014243.txt  2607232048_20230527014245.txt  695840875_20230527014244.txt  695840875_20230527014247.txt  695840875_20230527014248.txt  695840875_20230527014249.txt
data/setu/: customer_api.json
src/plugins/RealESRGAN/: __init__.py
src/plugins/chatgpt35/: __init__.py  config.py
src/plugins/genshin_cos/: __init__.py
src/plugins/jrrp/: __init__.py
src/plugins/netUelectricity/: __init__.py  processData.py
src/plugins/someAPI/: __init__.py  uomgapi.py
src/plugins/txcloud/: __init__.py  ocr.py
src/plugins/vits_chino/: Kafuu_Chino_voice_chat.py  __init__.py  config.py
src/plugins/vits_chino/moegoe/: MoeGoe.py  requirements.txt
src/plugins/vits_chino/moegoe/models/: config.json
