[project]
name = "Sx ver35"
version = "0.1.0"
description = "Sx ver35"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_setu_collection", "nonebot_plugin_arkrecord", "nonebot_plugin_ddcheck", "nonebot_plugin_imageutils"]
plugin_dirs = ["src\\plugins"]
builtin_plugins = []
